--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,14 +41,14 @@ h1 {
 .city-search {
     border-bottom: solid;
 }
-.city-form, .btn-auto {
-    margin: 0;
-    padding: 0;
-}
+
 .city-form, .btn-auto {
     display: flex;
     margin: 15px auto;
     padding: 10px 0;
+}
+.btn-auto {
+    padding-left: 35%;
 }
 .city-form {
     width: 90%;
@@ -59,8 +59,8 @@ h1 {
     color: white;
     border-radius: 6px;
     font-size: 18px;
-    padding-left: 85px;
 }
+
 input.city-form {
     text-align: center;
 }
